kube/demo/kuard/kuard.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
  namespace: kuard
  labels:
    app.kubernetes.io/name: kuard
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kuard
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kuard
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-arm64:1
        imagePullPolicy: Always
        name: kuard
        ports:
        - containerPort: 8080
