kube/demo/kuard/network.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kuard
  namespace: kuard
  labels:
    app.kubernetes.io/name: kuard
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: kuard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  namespace: kuard
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
  labels:
    app.kubernetes.io/name: kuard
spec:
  ingressClassName: nginx-internal
  tls:
  - hosts:
    - kuard.matthew-stratton.me
    secretName: kuard-tls
  rules:
  - host: kuard.matthew-stratton.me
    http:
      paths:
      - backend:
          service:
            name: kuard
            port:
              number: 80
        path: /
        pathType: Prefix
